refactor : swagger page customize
